--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before</td> <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Pre-workshop survey</a> </td> </tr>
+      <tr> <td>Before</td> <td><a href="https://forms.office.com/r/w6T1QVigqr">Pre-workshop survey</a> </td> </tr>
       <tr> <td>12:00</td>  <td>Connecting and Setup</td> </tr>
       <tr> <td>12:30</td>  <td>Introduction to Docker</td> </tr>
       <tr> <td>14:00</td>  <td>Break</td> </tr>
